# RavenOsint

./: .gitignore  Cargo.toml  README.md  cargo.toml
.cargo/: config.toml
.github/workflows/: main.yml
config/: default.toml
crates/raven-agent/: Cargo.toml
crates/raven-agent/src/: lib.rs  orchestrator.rs
crates/raven-agent/src/agents/: availability.rs  content.rs  mod.rs  ssl.rs
crates/raven-api/: Cargo.toml
crates/raven-api/src/: lib.rs  pipeline.rs  state.rs
crates/raven-api/src/routes/: discovery.rs  health.rs  mod.rs  results.rs  scan.rs
crates/raven-bus/: Cargo.toml
crates/raven-bus/src/: lib.rs
crates/raven-cli/: Cargo.toml
crates/raven-cli/src/: app.rs  commands.rs  main.rs
crates/raven-core/: Cargo.toml
crates/raven-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/raven-discovery/: Cargo.toml
crates/raven-discovery/src/: lib.rs  normalize.rs  runtime.rs
crates/raven-discovery/src/providers/: censys.rs  exa.rs  mod.rs  seed.rs  serper.rs  virustotal.rs
crates/raven-llm/: Cargo.toml
crates/raven-llm/src/: claude.rs  deepseek.rs  gemini.rs  github_copilot.rs  kimi.rs  lib.rs  openai.rs  openai_compatible.rs  prompt.rs  response.rs
crates/raven-scraper/: Cargo.toml
crates/raven-scraper/src/: extract.rs  lib.rs  rate_limit.rs  scraper.rs
crates/raven-storage/: Cargo.toml
crates/raven-storage/migrations/: 0001_initial.sql  0002_discovery.sql
crates/raven-storage/src/: duckdb_store.rs  lib.rs  model.rs  postgres.rs  sqlite.rs  store.rs
plugins/: README.md
