[package]
name        = "raven-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
raven-core  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
