[package]
name        = "raven-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
url         = { workspace = true }
figment     = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true }
anyhow      = { workspace = true }
utoipa      = { workspace = true }
async-trait = { workspace = true }
