[package]
name        = "raven-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
raven-core  = { workspace = true }
raven-bus   = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
url         = { workspace = true }
uuid        = { workspace = true }
async-trait = "0.1"
