[package]
name        = "raven-scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
raven-core  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
scraper     = { workspace = true }
governor    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
bytes       = { workspace = true }
async-trait = { workspace = true }