[package]
name        = "raven-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default  = ["sqlite"]
sqlite   = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
duckdb   = ["dep:duckdb"]

[dependencies]
raven-core  = { workspace = true }
sqlx        = { workspace = true, optional = true }
duckdb      = { workspace = true, optional = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
